namespace API.DTOs.Artists;

public class ArtistDto
{
   public int Id { get; set; }
   public required string ArtistName { get; set; }
}
